feat: Add new NotificationActivities endpoint
