# backend-flask/openapi-3.0.yml
@@ -148,17 +148,17 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Message'
+
   /api/activities/notifications:
       get:
-        Try It
         description: 'Return a feed of activity for all the people that I follow'
         tags:
           - activities
         parameters: []
         responses:
-            '200':
-          description: "Returns an array of activities"
-          content:
+          '200':
+            description: "Returns an array of activities"
+            content:
               application/json:
                 schema:
                   type: array
